--- a/themes/catching-the-spirit/style.css
+++ b/themes/catching-the-spirit/style.css
@@ -758,11 +758,18 @@ img {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap; }
     .page-template-front-page .site-main .front-page-sponsors-list li {
-      -ms-flex-preferred-size: 33%;
-          flex-basis: 33%;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
       padding: 20px; }
+      @media (min-width: 600px) {
+        .page-template-front-page .site-main .front-page-sponsors-list li {
+          -ms-flex: 1 1 33%;
+              flex: 1 1 33%; } }
       .page-template-front-page .site-main .front-page-sponsors-list li img {
-        height: 80px; }
+        height: 60px; }
+        @media (min-width: 600px) {
+          .page-template-front-page .site-main .front-page-sponsors-list li img {
+            height: 80px; } }
 
 .site-header {
   height: 60px; }
